--- a/examples/xdxsmi/xdxsmi-pod.yaml
+++ b/examples/xdxsmi/xdxsmi-pod.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod1
+  name: mypod
 spec:
   restartPolicy: OnFailure
   containers:
-  - image: ubuntu:20.04
-    name: pod-xdxsmi
-    command: ["xdxsmi"]
-
+  - name: pod-xdxsmi
+    image: hub.xdxct.com/xdxct-docker/xdxgpu/xdxsmi-sample:1.0.0-Demo-rc-1
+    command: ["bash", "-c", "xdxsmi"]
     resources:
       limits:
         xdxct.com/gpu: 1
