chore: remove local config
Signed-off-by: chen-mao <chenmao9541@163.com>

--- a/xdxct-device-plugin.yml
+++ b/xdxct-device-plugin.yml
@@ -19,7 +19,7 @@ spec:
         effect: NoSchedule
       priorityClassName: "system-node-critical"
       containers:
-      - image: hub.xdxct.com/xdxct-docker/xdxct/k8s-device-plugin:devel
+      - image: xdxct/k8s-device-plugin:devel
         name: xdxct-device-plugin
         securityContext:
           allowPrivilegeEscalation: false
